--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NALA Group</title>
+  <title>ANAS</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
