--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="#">projects</a>
     <a href="#">publications</a>
     <a href="#">resources</a>
-    <a href="#">team</a>
+    <a href="#">members</a>
     <a href="#">values</a>
   </nav>
 
